# transcriber

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.dev.alternative  README.md  SPEECHKIT_INSTALLATION.md  STORY_1_3_README.md  docker-build-troubleshooting.md  docker-compose.dev.yml  docker-compose.yml  init_db.py  pyproject.toml  requirements-dev.txt  requirements-speechkit.txt  requirements.txt  setup.cfg  start_app.sh  test_story_1_3.py  test_yandex_connection.py  validate_story_1_7.py  wsgi.py
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: app.py  celery_app.py  config.py  extensions.py
backend/app/: __init__.py  celery_factory.py
backend/tasks/: __init__.py  audio_processing.py  base.py  maintenance.py
docs/: DEVELOPMENT.md  REDIS_SETUP.md  YANDEX_SETUP.md  architecture.md  brief.md  prd.md
docs/architecture/: api-architecture.md  coding-standards.md  database-design.md  deployment-architecture.md  file-processing-pipeline.md  index.md  monitoring-observability.md  phase-2-evolution-path.md  scalability-plan.md  security-architecture.md  source-tree.md  system-architecture-overview.md  table-of-contents.md  tech-stack.md  technology-stack-details.md
docs/prd/: checklist-results-report.md  epic-1-foundation-core-processing-infrastructure.md  epic-2-multi-format-export-user-experience-enhancement.md  epic-3-production-readiness-scalability-foundation.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.project-setup-dev-environment.md  1.2.database-models-core-services-architecture.md  1.3.basic-file-upload-web-interface.md  1.4.processing-status-tracking-real-time-updates.md  1.5.yandex-speechkit-integration-audio-processing.md  1.6.basic-transcript-generation-and-display.md  1.7.basic-transcript-export-download-functionality.md  1.8.redis-dependency-management-environment-adaptive.md
frontend/templates/: base.html  index.html  status.html  transcript.html
migrations/: add_realtime_fields.sql  add_transcript_indexes.sql
scripts/: dev_setup.py  run_tests.py  setup_redis.sh  start_celery_beat.py  start_celery_worker.py
tests/: conftest.py
tests/integration/: test_api.py  test_database.py  test_export_workflow.py  test_processing_pipeline.py  test_transcript_api.py  test_transcript_e2e.py
tests/unit/: test_app.py  test_audio_service.py  test_celery_tasks.py  (+8 more)
(+33 files in other folders)
